[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Alphakind.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://audio/dragon_bg_forest.mp3" type="AudioStream" id=3]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://fire/Fire.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 3
font_data = ExtResource( 2 )

[node name="World" type="Spatial"]
script = ExtResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 74.6116, 0 )
light_energy = 1.127
shadow_enabled = true

[node name="ViewportContainerP1" type="ViewportContainer" parent="."]
margin_top = 2.0
margin_right = 793.0
margin_bottom = 250.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportP1" type="Viewport" parent="ViewportContainerP1"]
size = Vector2( 793, 248 )
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 2
shadow_atlas_quad_2 = 2
shadow_atlas_quad_3 = 2

[node name="CameraP1" type="Camera" parent="ViewportContainerP1/ViewportP1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7 )

[node name="ViewportContainerP2" type="ViewportContainer" parent="."]
margin_top = 262.0
margin_right = 799.0
margin_bottom = 530.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportP2" type="Viewport" parent="ViewportContainerP2"]
size = Vector2( 799, 268 )
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 2
shadow_atlas_quad_2 = 2
shadow_atlas_quad_3 = 2

[node name="CameraP2" type="Camera" parent="ViewportContainerP2/ViewportP2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -7 )

[node name="Level1" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.906, -10.8859, 5.309 )

[node name="OriginFire" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.51736, 16.348, 2.31284 )

[node name="Spawn1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29.6393, 51.649, -11.663 )

[node name="Spawn2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -84.5686, 51.649, -21.5472 )

[node name="Spawn3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.2266, 51.649, 25.1408 )

[node name="Spawn4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70.198, 80.0724, 55.836 )

[node name="Spawn5" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.9647, 51.649, 13.2659 )

[node name="Button1" type="Button" parent="."]
margin_right = 151.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.639216, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "SPARKLE: 0"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 0.046
anchor_bottom = 0.5
margin_right = 12.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.0313726, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "SPYRO: 0"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonToCollect" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.48
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = 12.0
margin_bottom = 20.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 0.117647, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "TO COLLECT: 0  "
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
